crates/turborepo-lib/src/cli/snapshots/turborepo_lib__cli__test__turbo---filter=foo-boundaries.snap
---
source: crates/turborepo-lib/src/cli/mod.rs
expression: err
---
error: Cannot use run arguments before `boundaries` subcommand

Usage: turbo [OPTIONS] [COMMAND]

For more information, try '--help'.
