crates/turborepo-lib/src/cli/snapshots/turborepo_lib__cli__test__turbo---no-daemon-watch-build.snap
---
source: crates/turborepo-lib/src/cli/test.rs
expression: err
---
error: unexpected argument '--no-daemon' found

  tip: a similar argument exists: '--no-update-notifier'

Usage: turbo [FLAGS] <SUBCOMMAND>

For more information, try '--help'.
